fix alignment of money fields to align on left with items

--- a/src/app/valiant/valiant-detail/valiant-detail.component.scss
+++ b/src/app/valiant/valiant-detail/valiant-detail.component.scss
@@ -100,8 +100,11 @@ h3 {
 }
 .fullWidth{
     width: 100%;
+    
 }
-
+.inventory .fullWidth {
+    padding: 4px;
+}
 .cards {
     display: flex;
     flex-wrap: wrap;
